# satproto

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/satproto-core/: Cargo.toml
crates/satproto-core/src/: crypto.rs  db.rs  feed.rs  lib.rs  post_id.rs  schema.rs
crates/satproto-wasm/: Cargo.toml
crates/satproto-wasm/src/: fetch.rs  lib.rs  publish.rs
site-template/.well-known/: satproto.json
site-template/app/: index.html  style.css
site-template/sat/follows/: index.json
