[package]
name = "satproto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
crypto_box = { version = "0.9", features = ["seal"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
base64 = "0.22"
thiserror = "1"
