[package]
name = "satproto-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
satproto-core = { path = "../satproto-core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
] }
base64 = "0.22"
